--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
     "gsap": "^3.12.5",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "swiper": "^11.1.14"
   }
 }
