--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^7.1.2",
     "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.79.4",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
@@ -31,5 +32,6 @@
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "swiper": "^11.1.14"
-  }
+  },
+  "homepage": "https://chaewonsung.github.io/dongguk-clone"
 }
